--- a/package.json
+++ b/package.json
@@ -2,13 +2,10 @@
   "name": "ngrx-wieder",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
     "prebuild": "cpx README.md projects/ngrx-wieder",
     "build": "ng build",
     "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
+    "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
@@ -20,7 +17,7 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
-    "@ngrx/store": "^7.3.0",
+    "@ngrx/store": "^7.4.0",
     "core-js": "^2.5.4",
     "fp-ts": "^1.15.0",
     "immer": "^2.1.4",
