--- a/projects/ngrx-wieder/package.json
+++ b/projects/ngrx-wieder/package.json
@@ -17,8 +17,8 @@
     "fp-ts": "^1.14.2"
   },
   "peerDependencies": {
-    "@angular/common": "^7.2.0",
-    "@angular/core": "^7.2.0",
+    "@angular/common": "~8.0.1",
+    "@angular/core": "~8.0.1",
     "@ngrx/store": "^7.2.0",
     "immer": "^2.0.0"
   }
