--- a/projects/ngrx-wieder/package.json
+++ b/projects/ngrx-wieder/package.json
@@ -19,7 +19,7 @@
   "peerDependencies": {
     "@angular/common": "~8.0.1",
     "@angular/core": "~8.0.1",
-    "@ngrx/store": "^7.2.0",
+    "@ngrx/store": "~8.0.1",
     "immer": "^2.0.0"
   }
 }
