build: update to NgRx 9

--- a/angular.json
+++ b/angular.json
@@ -44,5 +44,8 @@
       }
     }
   },
-  "defaultProject": "ngrx-wieder"
+  "defaultProject": "ngrx-wieder",
+  "cli": {
+    "analytics": true
+  }
 }
