--- a/angular.json
+++ b/angular.json
@@ -14,6 +14,11 @@
           "options": {
             "tsConfig": "projects/ngrx-wieder/tsconfig.lib.json",
             "project": "projects/ngrx-wieder/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/ngrx-wieder/tsconfig.lib.prod.json"
+            }
           }
         },
         "test": {
@@ -39,5 +44,8 @@
       }
     }
   },
-  "defaultProject": "ngrx-wieder"
+  "defaultProject": "ngrx-wieder",
+  "cli": {
+    "analytics": true
+  }
 }
