build: update build
- use standard-version
- use commit-lint
- update license
- provide coverage report

--- a/package.json
+++ b/package.json
@@ -3,10 +3,16 @@
   "version": "0.0.0",
   "scripts": {
     "prebuild": "cpx README.md projects/ngrx-wieder",
-    "build": "ng build",
-    "test": "ng test",
-    "test:ci": "ng test --watch false",
-    "lint": "ng lint"
+    "build": "ng build --prod",
+    "test": "ng test --watch false",
+    "test:watch": "ng test",
+    "test:ci": "ng test --watch false --code-coverage",
+    "posttest:ci": "cat ./coverage/ngrx-wieder/lcov.info | codecov",
+    "lint": "ng lint",
+    "e2e": "ng e2e",
+    "bump": "standard-version",
+    "prerelease": "npm ci && npm run lint && npm run test && npm run build",
+    "release": "npm publish --folder ./dist/ngrx-wieder"
   },
   "private": true,
   "dependencies": {
@@ -31,11 +37,16 @@
     "@angular/cli": "~9.0.7",
     "@angular/compiler-cli": "~9.0.7",
     "@angular/language-service": "~9.0.7",
+    "@commitlint/cli": "^8.3.5",
+    "@commitlint/config-conventional": "^8.3.4",
+    "@commitlint/travis-cli": "^8.3.5",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
+    "codecov": "^3.6.5",
     "codelyzer": "^5.1.2",
     "cpx": "^1.5.0",
+    "husky": "^4.2.3",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.0.0",
@@ -45,6 +56,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "ng-packagr": "^9.0.0",
     "protractor": "~5.4.0",
+    "standard-version": "^7.1.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.7.5"
