--- a/projects/ngrx-wieder/package.json
+++ b/projects/ngrx-wieder/package.json
@@ -24,7 +24,7 @@
   "peerDependencies": {
     "@angular/common": "^8.0.1 - ^9.0.7",
     "@angular/core": "^8.0.1 - ^9.0.7",
-    "@ngrx/store": "^8.0.1 - ^9.0.7",
+    "@ngrx/store": "^8.5.0",
     "immer": "^6.0.3"
   }
 }
