--- a/projects/ngrx-wieder/package.json
+++ b/projects/ngrx-wieder/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngrx-wieder",
-  "version": "3.0.0",
+  "version": "3.0.1-next.0",
   "author": "Nils Melhorn <mail@nils-mehlhorn.de> (https://nils-mehlhorn.de)",
   "description": "Lightweight undo-redo for NgRx",
   "homepage": "https://github.com/nilsmehlhorn/ngrx-wieder",
