--- a/projects/ngrx-wieder/package.json
+++ b/projects/ngrx-wieder/package.json
@@ -26,5 +26,8 @@
     "@angular/core": "^8.0.1 - ^9.0.7",
     "@ngrx/store": "^8.5.0",
     "immer": "^6.0.3"
+  },
+  "dependencies": {
+    "tslib": "^2.0.0"
   }
 }
