--- a/projects/ngrx-wieder/package.json
+++ b/projects/ngrx-wieder/package.json
@@ -25,7 +25,7 @@
     "@angular/common": "^10.0.0",
     "@angular/core": "^10.0.0",
     "@ngrx/store": "^10.0.0",
-    "immer": "^6.0.3"
+    "immer": "^6.0.3 - ^7.0.0"
   },
   "dependencies": {
     "tslib": "^2.0.0"
