--- a/package.json
+++ b/package.json
@@ -16,49 +16,49 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.0.12",
-    "@angular/common": "~10.0.12",
-    "@angular/compiler": "~10.0.12",
-    "@angular/core": "~10.0.12",
-    "@angular/forms": "~10.0.12",
-    "@angular/platform-browser": "~10.0.12",
-    "@angular/platform-browser-dynamic": "~10.0.12",
-    "@angular/router": "~10.0.12",
-    "@ngrx/store": "^10.0.0",
+    "@angular/animations": "~11.2.6",
+    "@angular/common": "~11.2.6",
+    "@angular/compiler": "~11.2.6",
+    "@angular/core": "~11.2.6",
+    "@angular/forms": "~11.2.6",
+    "@angular/platform-browser": "~11.2.6",
+    "@angular/platform-browser-dynamic": "~11.2.6",
+    "@angular/router": "~11.2.6",
+    "@ngrx/store": "^11.0.1",
     "core-js": "^2.5.4",
-    "immer": "^8.0.1",
-    "rxjs": "~6.6.2",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.10.2"
+    "immer": "^9.0.1",
+    "rxjs": "~6.6.6",
+    "tslib": "^2.1.0",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1000.7",
-    "@angular-devkit/build-ng-packagr": "~0.1000.7",
-    "@angular/cli": "~10.0.7",
-    "@angular/compiler-cli": "~10.0.12",
-    "@angular/language-service": "~10.0.12",
+    "@angular-devkit/build-angular": "~0.1102.5",
+    "@angular-devkit/core": "^11.2.5",
+    "@angular/cli": "~11.2.5",
+    "@angular/compiler-cli": "~11.2.6",
+    "@angular/language-service": "~11.2.6",
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
     "@commitlint/travis-cli": "^8.3.5",
-    "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
-    "codecov": "^3.6.5",
-    "codelyzer": "^6.0.0",
+    "@types/jasmine": "~3.6.0",
+    "@types/jasminewd2": "^2.0.8",
+    "@types/node": "^12.20.6",
+    "codecov": "^3.8.1",
+    "codelyzer": "^6.0.1",
     "cpx": "^1.5.0",
-    "husky": "^4.2.3",
-    "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
+    "husky": "^4.3.8",
+    "jasmine-core": "~3.7.1",
+    "jasmine-spec-reporter": "~6.0.0",
+    "karma": "~6.2.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~3.3.0",
+    "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "ng-packagr": "^10.0.0",
+    "ng-packagr": "^11.2.4",
     "protractor": "~7.0.0",
-    "standard-version": "^8.0.1",
-    "ts-node": "~7.0.0",
+    "standard-version": "^8.0.2",
+    "ts-node": "~9.1.1",
     "tslint": "~6.1.0",
-    "typescript": "~3.9.7"
+    "typescript": "~4.1.5"
   }
 }
