--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "@angular/router": "~12.2.2",
     "@ngrx/store": "^12.4.0",
     "core-js": "^2.5.4",
-    "immer": "^9.0.1",
-    "rxjs": "~6.6.6",
-    "tslib": "^2.1.0",
+    "immer": "^9.0.5",
+    "rxjs": "^6.6.7",
+    "tslib": "^2.3.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -37,14 +37,14 @@
     "@angular/cli": "~12.2.2",
     "@angular/compiler-cli": "~12.2.2",
     "@angular/language-service": "~12.2.2",
-    "@commitlint/cli": "^8.3.5",
-    "@commitlint/config-conventional": "^8.3.4",
-    "@commitlint/travis-cli": "^8.3.5",
-    "@types/jasmine": "~3.6.0",
-    "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^12.20.6",
-    "codecov": "^3.8.1",
-    "codelyzer": "^6.0.1",
+    "@commitlint/cli": "^13.1.0",
+    "@commitlint/config-conventional": "^13.1.0",
+    "@commitlint/travis-cli": "^13.1.0",
+    "@types/jasmine": "^3.6.11",
+    "@types/jasminewd2": "^2.0.10",
+    "@types/node": "^12.20.20",
+    "codecov": "^3.8.3",
+    "codelyzer": "^6.0.2",
     "cpx": "^1.5.0",
     "husky": "^4.3.8",
     "jasmine-core": "~3.7.1",
@@ -53,7 +53,7 @@
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-jasmine-html-reporter": "^1.7.0",
     "ng-packagr": "^12.2.0",
     "protractor": "~7.0.0",
     "standard-version": "^8.0.2",
