--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "prebuild": "cpx README.md projects/ngrx-wieder",
-    "build": "ng build --prod",
+    "build": "ng build --configuration production",
     "test": "ng test --watch false",
     "test:watch": "ng test",
     "test:ci": "ng test --watch false --code-coverage",
@@ -16,49 +16,49 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.2.6",
-    "@angular/common": "~11.2.6",
-    "@angular/compiler": "~11.2.6",
-    "@angular/core": "~11.2.6",
-    "@angular/forms": "~11.2.6",
-    "@angular/platform-browser": "~11.2.6",
-    "@angular/platform-browser-dynamic": "~11.2.6",
-    "@angular/router": "~11.2.6",
-    "@ngrx/store": "^11.0.1",
+    "@angular/animations": "~12.2.2",
+    "@angular/common": "~12.2.2",
+    "@angular/compiler": "~12.2.2",
+    "@angular/core": "~12.2.2",
+    "@angular/forms": "~12.2.2",
+    "@angular/platform-browser": "~12.2.2",
+    "@angular/platform-browser-dynamic": "~12.2.2",
+    "@angular/router": "~12.2.2",
+    "@ngrx/store": "^12.4.0",
     "core-js": "^2.5.4",
-    "immer": "^9.0.1",
-    "rxjs": "~6.6.6",
-    "tslib": "^2.1.0",
+    "immer": "^9.0.5",
+    "rxjs": "^6.6.7",
+    "tslib": "^2.3.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.5",
-    "@angular-devkit/core": "^11.2.5",
-    "@angular/cli": "~11.2.5",
-    "@angular/compiler-cli": "~11.2.6",
-    "@angular/language-service": "~11.2.6",
-    "@commitlint/cli": "^8.3.5",
-    "@commitlint/config-conventional": "^8.3.4",
-    "@commitlint/travis-cli": "^8.3.5",
-    "@types/jasmine": "~3.6.0",
-    "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^12.20.6",
-    "codecov": "^3.8.1",
-    "codelyzer": "^6.0.1",
+    "@angular-devkit/build-angular": "~12.2.2",
+    "@angular-devkit/core": "^12.2.2",
+    "@angular/cli": "~12.2.2",
+    "@angular/compiler-cli": "~12.2.2",
+    "@angular/language-service": "~12.2.2",
+    "@commitlint/cli": "^13.1.0",
+    "@commitlint/config-conventional": "^13.1.0",
+    "@commitlint/travis-cli": "^13.1.0",
+    "@types/jasmine": "^3.6.11",
+    "@types/jasminewd2": "^2.0.10",
+    "@types/node": "^12.20.20",
+    "codecov": "^3.8.3",
+    "codelyzer": "^6.0.2",
     "cpx": "^1.5.0",
     "husky": "^4.3.8",
     "jasmine-core": "~3.7.1",
     "jasmine-spec-reporter": "~6.0.0",
-    "karma": "~6.2.0",
+    "karma": "~6.3.4",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "ng-packagr": "^11.2.4",
+    "karma-jasmine-html-reporter": "^1.7.0",
+    "ng-packagr": "^12.2.0",
     "protractor": "~7.0.0",
     "standard-version": "^8.0.2",
     "ts-node": "~9.1.1",
     "tslint": "~6.1.0",
-    "typescript": "~4.1.5"
+    "typescript": "~4.3.5"
   }
 }
