refactor: migrate to eslint and ngrx 13
- code reformatting
- refactor selectors with props to factory selectors

BREAKING CHANGE: history selectors are now factory selectors

--- a/angular.json
+++ b/angular.json
@@ -28,12 +28,22 @@
             "tsConfig": "projects/ngrx-wieder/tsconfig.spec.json",
             "karmaConfig": "projects/ngrx-wieder/karma.conf.js"
           }
+        },
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
+          "options": {
+            "lintFilePatterns": [
+              "projects/ngrx-wieder/**/*.ts",
+              "projects/ngrx-wieder/**/*.html"
+            ]
+          }
         }
       }
     }
   },
   "defaultProject": "ngrx-wieder",
   "cli": {
-    "analytics": true
+    "analytics": true,
+    "defaultCollection": "@angular-eslint/schematics"
   }
 }
