--- a/package.json
+++ b/package.json
@@ -34,6 +34,11 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.1.4",
     "@angular-devkit/core": "^13.1.4",
+    "@angular-eslint/builder": "13.0.1",
+    "@angular-eslint/eslint-plugin": "13.0.1",
+    "@angular-eslint/eslint-plugin-template": "13.0.1",
+    "@angular-eslint/schematics": "13.0.1",
+    "@angular-eslint/template-parser": "13.0.1",
     "@angular/cli": "~13.1.4",
     "@angular/compiler-cli": "~13.1.3",
     "@angular/language-service": "~13.1.3",
@@ -43,9 +48,14 @@
     "@types/jasmine": "^3.6.11",
     "@types/jasminewd2": "^2.0.10",
     "@types/node": "^12.20.20",
+    "@typescript-eslint/eslint-plugin": "5.3.0",
+    "@typescript-eslint/parser": "5.3.0",
     "codecov": "^3.8.3",
-    "codelyzer": "^6.0.2",
     "cpx": "^1.5.0",
+    "eslint": "^8.2.0",
+    "eslint-plugin-import": "latest",
+    "eslint-plugin-jsdoc": "latest",
+    "eslint-plugin-prefer-arrow": "latest",
     "husky": "^4.3.8",
     "jasmine-core": "~3.7.1",
     "jasmine-spec-reporter": "~6.0.0",
@@ -58,7 +68,6 @@
     "protractor": "~7.0.0",
     "standard-version": "^8.0.2",
     "ts-node": "~9.1.1",
-    "tslint": "~6.1.0",
     "typescript": "~4.5.5"
   }
 }
