build(deps): update to angular 13 (#56)
- update to angular 13
- update to ngrx 13
- update immer
- migrate to eslint
- refactor selectors with props to factory selectors
- update example in readme to factory selectors

BREAKING CHANGE: Angular 13 and history selectors are now factory selectors

--- a/angular.json
+++ b/angular.json
@@ -30,14 +30,11 @@
           }
         },
         "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
+          "builder": "@angular-eslint/builder:lint",
           "options": {
-            "tsConfig": [
-              "projects/ngrx-wieder/tsconfig.lib.json",
-              "projects/ngrx-wieder/tsconfig.spec.json"
-            ],
-            "exclude": [
-              "**/node_modules/**"
+            "lintFilePatterns": [
+              "projects/ngrx-wieder/**/*.ts",
+              "projects/ngrx-wieder/**/*.html"
             ]
           }
         }
@@ -46,6 +43,7 @@
   },
   "defaultProject": "ngrx-wieder",
   "cli": {
-    "analytics": true
+    "analytics": true,
+    "defaultCollection": "@angular-eslint/schematics"
   }
 }
