--- a/package.json
+++ b/package.json
@@ -16,36 +16,46 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.2.2",
-    "@angular/common": "~12.2.2",
-    "@angular/compiler": "~12.2.2",
-    "@angular/core": "~12.2.2",
-    "@angular/forms": "~12.2.2",
-    "@angular/platform-browser": "~12.2.2",
-    "@angular/platform-browser-dynamic": "~12.2.2",
-    "@angular/router": "~12.2.2",
-    "@ngrx/store": "^12.4.0",
+    "@angular/animations": "~13.1.3",
+    "@angular/common": "~13.1.3",
+    "@angular/compiler": "~13.1.3",
+    "@angular/core": "~13.1.3",
+    "@angular/forms": "~13.1.3",
+    "@angular/platform-browser": "~13.1.3",
+    "@angular/platform-browser-dynamic": "~13.1.3",
+    "@angular/router": "~13.1.3",
+    "@ngrx/store": "^13.0.2",
     "core-js": "^2.5.4",
-    "immer": "^9.0.5",
+    "immer": "^9.0.12",
     "rxjs": "^6.6.7",
     "tslib": "^2.3.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.2",
-    "@angular-devkit/core": "^12.2.2",
-    "@angular/cli": "~12.2.2",
-    "@angular/compiler-cli": "~12.2.2",
-    "@angular/language-service": "~12.2.2",
+    "@angular-devkit/build-angular": "~13.1.4",
+    "@angular-devkit/core": "^13.1.4",
+    "@angular-eslint/builder": "13.0.1",
+    "@angular-eslint/eslint-plugin": "13.0.1",
+    "@angular-eslint/eslint-plugin-template": "13.0.1",
+    "@angular-eslint/schematics": "13.0.1",
+    "@angular-eslint/template-parser": "13.0.1",
+    "@angular/cli": "~13.1.4",
+    "@angular/compiler-cli": "~13.1.3",
+    "@angular/language-service": "~13.1.3",
     "@commitlint/cli": "^13.1.0",
     "@commitlint/config-conventional": "^13.1.0",
     "@commitlint/travis-cli": "^13.1.0",
     "@types/jasmine": "^3.6.11",
     "@types/jasminewd2": "^2.0.10",
     "@types/node": "^12.20.20",
+    "@typescript-eslint/eslint-plugin": "5.3.0",
+    "@typescript-eslint/parser": "5.3.0",
     "codecov": "^3.8.3",
-    "codelyzer": "^6.0.2",
     "cpx": "^1.5.0",
+    "eslint": "^8.2.0",
+    "eslint-plugin-import": "latest",
+    "eslint-plugin-jsdoc": "latest",
+    "eslint-plugin-prefer-arrow": "latest",
     "husky": "^4.3.8",
     "jasmine-core": "~3.7.1",
     "jasmine-spec-reporter": "~6.0.0",
@@ -54,11 +64,10 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.7.0",
-    "ng-packagr": "^12.2.0",
+    "ng-packagr": "^13.1.3",
     "protractor": "~7.0.0",
     "standard-version": "^8.0.2",
     "ts-node": "~9.1.1",
-    "tslint": "~6.1.0",
-    "typescript": "~4.3.5"
+    "typescript": "~4.5.5"
   }
 }
