ci: migrate travis to github actions

--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "test": "ng test --watch false",
     "test:watch": "ng test",
     "test:ci": "ng test --watch false --code-coverage",
-    "posttest:ci": "cat ./coverage/ngrx-wieder/lcov.info | codecov",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "bump": "standard-version",
@@ -50,7 +49,6 @@
     "@types/node": "^12.20.20",
     "@typescript-eslint/eslint-plugin": "5.3.0",
     "@typescript-eslint/parser": "5.3.0",
-    "codecov": "^3.8.3",
     "cpx": "^1.5.0",
     "eslint": "^8.2.0",
     "eslint-plugin-import": "latest",
@@ -61,6 +59,7 @@
     "jasmine-spec-reporter": "~6.0.0",
     "karma": "~6.3.4",
     "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage": "^2.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.7.0",
