--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,8 @@
           "options": {
             "main": "projects/ngrx-wieder/src/test.ts",
             "tsConfig": "projects/ngrx-wieder/tsconfig.spec.json",
-            "karmaConfig": "projects/ngrx-wieder/karma.conf.js"
+            "karmaConfig": "projects/ngrx-wieder/karma.conf.js",
+            "codeCoverageExclude": ["projects/ngrx-wieder/src/lib/test-util/**/*"]
           }
         },
         "lint": {
