update to Angular 14

--- a/angular.json
+++ b/angular.json
@@ -42,9 +42,10 @@
       }
     }
   },
-  "defaultProject": "ngrx-wieder",
   "cli": {
     "analytics": true,
-    "defaultCollection": "@angular-eslint/schematics"
+    "schematicCollections": [
+      "@angular-eslint/schematics"
+    ]
   }
 }
