test: fix coverage reporting

--- a/angular.json
+++ b/angular.json
@@ -26,10 +26,10 @@
           "options": {
             "main": "projects/ngrx-wieder/src/test.ts",
             "tsConfig": "projects/ngrx-wieder/tsconfig.spec.json",
-            "karmaConfig": "projects/ngrx-wieder/karma.conf.js",
             "codeCoverageExclude": [
               "projects/ngrx-wieder/src/lib/test-util/**/*"
-            ]
+            ],
+            "karmaConfig": "projects/ngrx-wieder/karma.conf.js"
           }
         },
         "lint": {
